added calc func to font size for mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 * {
     font-family: sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: font-size: calc(14px + (16 - 14) * ((100vw - 400px) / (1600 - 400)));
     -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
