--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         ul:nth-of-type(2) {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
+            align-items: center;
             list-style-type: none;
             grid-gap: 15px
         }
@@ -78,7 +79,7 @@
         li::after {
             display: block;
             content: '';
-            border-bottom: solid 12px #099ca6;
+            border-bottom: solid 12px #999;
             border-radius: 25px;
             transform: scaleX(0);
             transition: transform 333ms ease;
